--- a/folders/blog.html
+++ b/folders/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Web Blog</title>
+    <title>Folders Blog</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
@@ -15,7 +15,7 @@
         <ul>
             <li>
                 <a href="index.html">Home</a>
-                <a href="presentation.html">Presentation</a>
+                <a href="folder01/folder02/presentation.html">Presentation</a>
                 <a href="blog.html" class="disabled">Blog</a>
                 <a href="contact.html">Contact</a>
             </li>
