--- a/folders/contact.html
+++ b/folders/contact.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Web Blog</title>
+    <title>Folders Contact</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
     <header>
-        <h1>Blog</h1>
+        <h1>Contact</h1>
     </header>
     <nav>
         <ul>
             <li>
                 <a href="index.html">Home</a>
-                <a href="presentation.html">Presentation</a>
-                <a href="blog.html" class="disabled">Blog</a>
-                <a href="contact.html">Contact</a>
+                <a href="folder01/folder02/presentation.html">Presentation</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html" class="disabled">Contact</a>
             </li>
         </ul>
     </nav>
