--- a/personalweb/contact.html
+++ b/personalweb/contact.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Personal Web Contact</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
-    <h1>Contact</h1>
+    <header>
+        <h1>Contact</h1>
+    </header>
     <nav>
         <ul>
             <li>
