--- a/personalweb/index.html
+++ b/personalweb/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
-    <h1>Home</h1>
+    <header>
+        <h1>Home</h1>
+    </header>
     <nav>
         <ul>
             <li>
@@ -19,5 +21,17 @@
             </li>
         </ul>
     </nav>
+    <main>
+        <article>
+            <!-- Article about the city of Toronto in Canada -->
+            <h2>
+                Imagen
+            </h2>
+            <h3>
+                Toronto
+            </h3>
+            <img src="img/toronto.jpg" alt="Toronto" title="Toronto">
+        </article>
+    </main>
 </body>
 </html>
