--- a/personalweb/index.html
+++ b/personalweb/index.html
@@ -22,16 +22,50 @@
         </ul>
     </nav>
     <main>
-        <article>
-            <!-- Article about the city of Toronto in Canada -->
-            <h2>
-                Imagen
-            </h2>
-            <h3>
-                Toronto
-            </h3>
-            <img src="img/toronto.jpg" alt="Toronto" title="Toronto">
-        </article>
+        <section class="cls-articles">
+            <article id="article">
+                <!-- Article about the city of Toronto in Canada -->
+                <h2>
+                    Article about Toronto
+                </h2>
+                <h3>
+                    Toronto
+                </h3>
+                <img src="img/toronto.jpg" alt="Toronto" title="Toronto">
+            </article>
+        </section>
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nihil a aspernatur quisquam nulla eligendi inventore provident enim? Voluptates amet ducimus assumenda inventore aliquid asperiores, tenetur nemo pariatur eligendi ipsam?
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit dolores nulla dolor repudiandae aliquid voluptatibus minima accusamus harum doloremque enim, quam est odit explicabo optio quaerat modi itaque aperiam ducimus!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam corporis totam illo, eius sunt odit labore necessitatibus et animi cum, numquam aut inventore iure porro! Dolores assumenda quia ipsum.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nihil a aspernatur quisquam nulla eligendi inventore provident enim? Voluptates amet ducimus assumenda inventore aliquid asperiores, tenetur nemo pariatur eligendi ipsam?
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit dolores nulla dolor repudiandae aliquid voluptatibus minima accusamus harum doloremque enim, quam est odit explicabo optio quaerat modi itaque aperiam ducimus!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam corporis totam illo, eius sunt odit labore necessitatibus et animi cum, numquam aut inventore iure porro! Dolores assumenda quia ipsum.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nihil a aspernatur quisquam nulla eligendi inventore provident enim? Voluptates amet ducimus assumenda inventore aliquid asperiores, tenetur nemo pariatur eligendi ipsam?
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit dolores nulla dolor repudiandae aliquid voluptatibus minima accusamus harum doloremque enim, quam est odit explicabo optio quaerat modi itaque aperiam ducimus!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam corporis totam illo, eius sunt odit labore necessitatibus et animi cum, numquam aut inventore iure porro! Dolores assumenda quia ipsum.
+            </p>
+            <p>
+                <a id="end" href="#article">Article</a>
+            </p>
+        </section>
     </main>
 </body>
 </html>
