--- a/personalweb/presentation.html
+++ b/personalweb/presentation.html
@@ -21,5 +21,11 @@
             </li>
         </ul>
     </nav>
+    <p>
+        <a href="index.html#article">Article in Home</a>
+    </p>
+    <p>
+        <a href="index.html#end">End of Home</a>
+    </p>
 </body>
 </html>
