--- a/personalweb/index.html
+++ b/personalweb/index.html
@@ -33,6 +33,13 @@
                 </h3>
                 <img src="img/toronto.jpg" alt="Toronto" title="Toronto">
             </article>
+            <article id="personal-web-article">
+                <!-- Article about Google Maps -->
+                <h2>
+                    Personal Web
+                </h2>
+                <iframe src="index.html" frameborder="0"></iframe>
+            </article>
         </section>
         <section>
             <p>
