--- a/personalweb/index.html
+++ b/personalweb/index.html
@@ -48,6 +48,26 @@
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit dolores nulla dolor repudiandae aliquid voluptatibus minima accusamus harum doloremque enim, quam est odit explicabo optio quaerat modi itaque aperiam ducimus!
             </p>
+            <table border-collapse: collapse;>
+                <tbody>
+                    <tr>
+                        <td colspan="2">Row 1 Cells 1 and 2</td>
+                        <td rowspan="3" class="cls-table-separator">Row 1 Cell 3</td>
+                        <td>Row 1 Cell 4</td>
+                        <td rowspan="2">Row 1 Cell 5</td>
+                    </tr>
+                    <tr>
+                        <td>Row 2 Cell 1</td>
+                        <td>Row 2 Cell 2</td>
+                        <td>Row 2 Cell 4</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="cls-table-footer">Row 3 Cells 1 and 2</td>
+                        <td class="cls-table-footer">Row 3 Cell 4</td>
+                        <td class="cls-table-footer">Row 3 Cell 5</td>
+                    </tr>
+                </tbody>
+            </table>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam corporis totam illo, eius sunt odit labore necessitatibus et animi cum, numquam aut inventore iure porro! Dolores assumenda quia ipsum.
             </p>
