--- a/personalweb/index.html
+++ b/personalweb/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Web</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <style>
+        main {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -41,7 +46,7 @@
                 <iframe src="index.html" frameborder="0"></iframe>
             </article>
         </section>
-        <section>
+        <section style="border-top: 4px solid black; margin-top: 2em">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nihil a aspernatur quisquam nulla eligendi inventore provident enim? Voluptates amet ducimus assumenda inventore aliquid asperiores, tenetur nemo pariatur eligendi ipsam?
             </p>
