--- a/personalweb/contact.html
+++ b/personalweb/contact.html
@@ -20,6 +20,7 @@
                 <a href="presentation.html">Presentation</a>
                 <a href="blog.html">Blog</a>
                 <a href="contact.html" class="disabled">Contact</a>
+                <a href="css.html">CSS</a>
             </li>
         </ul>
     </nav>
