--- a/personalweb/index.html
+++ b/personalweb/index.html
@@ -23,6 +23,7 @@
                 <a href="presentation.html">Presentation</a>
                 <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
+                <a href="css.html">CSS</a>
             </li>
         </ul>
     </nav>
