--- a/personalweb/css.html
+++ b/personalweb/css.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Personal Web CSS</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
+
 <body>
     <header>
         <h1>CSS</h1>
@@ -34,31 +36,124 @@
             <div>CONTINGUT</div>
         </section>
         <section aria-label="Squares" id="squares">
-            <div class="white"><p>white</p></div>
-            <div class="purple"><p>rgba(142, 68, 173, 1)</p></div>
-            <div class="yellow"><p>#F1C40F</p></div>
+            <div class="white">
+                <p>white</p>
+            </div>
+            <div class="purple">
+                <p>rgba(142, 68, 173, 1)</p>
+            </div>
+            <div class="yellow">
+                <p>#F1C40F</p>
+            </div>
         </section>
         <section aria-label="Text" id="text">
-            <p>En el momento en que <span class="green">entiendo verdaderamente</span> a mi <span class="red">enemigo</span>, en el momento en el que lo <span class="underline">entiendo</span> lo suficientemente bien como para <span class="font">derrotarle</span>, entonces, en ese preciso instante, <span class="bold-blue">también le</span> <span class="bold-red">quiero</span>.</p>
+            <p>En el momento en que <span class="green">entiendo verdaderamente</span> a mi <span
+                    class="red">enemigo</span>, en el momento en el que lo <span class="underline">entiendo</span> lo
+                suficientemente bien como para <span class="font">derrotarle</span>, entonces, en ese preciso instante,
+                <span class="bold-blue">también le</span> <span class="bold-red">quiero</span>.</p>
         </section>
         <section aria-label="Background" id="background">
             <div class="one">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam facere illum ab velit itaque.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus culpa aliquid.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel
+                    perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam
+                    facere illum ab velit itaque.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id
+                    similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus
+                    culpa aliquid.</p>
             </div>
             <div class="two">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam facere illum ab velit itaque.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus culpa aliquid.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel
+                    perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam
+                    facere illum ab velit itaque.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id
+                    similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus
+                    culpa aliquid.</p>
             </div>
-            <div class="three">                
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam facere illum ab velit itaque.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus culpa aliquid.</p>
+            <div class="three">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel
+                    perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam
+                    facere illum ab velit itaque.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id
+                    similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus
+                    culpa aliquid.</p>
             </div>
             <div class="four">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam facere illum ab velit itaque.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus culpa aliquid.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam tempore eaque illum. Vel
+                    perspiciatis voluptatibus quam eaque minima officia, eveniet iure quo cupiditate eligendi, nam
+                    facere illum ab velit itaque.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae cumque fugit minus beatae id
+                    similique labore ad possimus? Cupiditate sequi iure adipisci inventore harum sunt fugit eos, ducimus
+                    culpa aliquid.</p>
+            </div>
+        </section>
+        <section aria-label="Two Columns" id="two-columns">
+            <h4>Dues columnes mateixa amplada amb inline-block</h4>
+            <div class="one">
+                <p>Contingut primera columna</p>
+                <p>Contingut segona columna</p>
+            </div>
+            <h4>Dues columnes diferent amplada amb inline-block</h4>
+            <div class="two">
+                <p>Contingut primera columna</p>
+                <p>Contingut segona columna</p>
+            </div>
+            <h4>Dues columnes alineades amb float</h4>
+            <div class="three">
+                <p>Contingut alineat a l'esquerra</p>
+                <p>Contingut alineat a la dreta</p>
+            </div>
+            <h4 class="clear-float">Dues columnes amb flex</h4>
+            <div class="four">
+                <p>Contingut primera columna</p>
+                <p>Contingut segona columna</p>
+            </div>
+        </section>
+        <section aria-label="Three Columns" id="three-columns">
+            <header>
+                <p>Capçalera</p>
+            </header>
+            <div class="content">
+                <p>Columna 1</p>
+                <p>Columna 2</p>
+                <p>Columna 3</p>
+            </div>
+            <footer class="clear-float">
+                <p>Peu</p>
+            </footer>
+        </section>
+        <section aria-label="Centered Boxes" id="centered-boxes">
+            <p>Qualsevol contingut: imatges, text, etc. <br> margin auto</p>
+            <p>Qualsevol contingut: imatges, text, etc. <br> position absolute</p>
+        </section>
+        <section aria-label="Menu" id="menu">
+            <h4>Inline</h4>
+            <div class="one">
+                <p>Inici</p
+                ><p>Qui som</p
+                ><p>Tenda</p
+                ><p>Novetats</p
+                ><p class="selected">Contacte</p>
+            </div>
+            <h4>Float</h4>
+            <div class="two">
+                <p>Inici</p>
+                <p>Qui som</p>
+                <p>Tenda</p>
+                <p>Novetats</p>
+                <p class="selected">Contacte</p>
+            </div>
+            <h4 class="clear-float">List</h4>
+            <div class="three">
+                <ul>
+                    <li>Inici</li><
+                    li>Qui som</><
+                    li>Tenda</li><
+                    li>Novetats</li><
+                    li class="selected">Contacte</li>
+                </ul>
             </div>
         </section>
     </main>
 </body>
+
 </html>
